--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               </a>
             </div>
           </div>
-          <div class='search-details'>CONTENT GOES HERE</div>
+          <div class='search-details'></div>
           </section>
         <!--  previous search -->
         <section class="column is-one-third">
@@ -35,8 +35,8 @@
                 previous history
             </div>
             <!-- single new article -->
-            <div class="secondary">
-                single news card
+            <div class="secondary" id='news'>
+                <a target="_blank" href=""></a>
             </div>
         </section>
     </div>
