adds diff background img

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 </head>
 
 <body>
-    <header class="navbar-item">
-        <h1>HEADER GOES HERE</h1>
+    <header>
+        <h1>Ketchup on COVID-19</h1>
     </header>
     <div class="wrapper columns">
         <section class="column main">
             <div class="field has-addons">
                 <div class="control">
-                    <input class="input" id='city' type="text" placeholder="Enter city name">
+                    <input class="input" id='city' type="text" placeholder="Enter country name">
                 </div>
                 <div class="control">
                     <a class="button is-info" id="search">
