handles default background and news

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="field">
                     <p class="control has-icons-left">
                         <span class="select">
-                            <select>
+                            <select id="country-dropdown">
                                 <option selected>Country</option>
                                 <option value="Afganistan">Afghanistan</option>
                                 <option value="Albania">Albania</option>
