--- a/index.html
+++ b/index.html
@@ -291,8 +291,7 @@
                     </div>
                 </div>
             </div>
-            <div class='search-details'>
-                SEARCH DETAILS GO HERE
+            <div id="info" class='search-details'>
             </div>
         </section>
         <section class="column">
@@ -307,6 +306,7 @@
         </section>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 
