adds localstorage support and makes chart countries dynamically retrieved from localstorage and geo location

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                                 <option value="United Kingdom">United Kingdom</option>
                                 <option value="Ukraine">Ukraine</option>
                                 <option value="United Arab Erimates">United Arab Emirates</option>
-                                <option value="United States of America">United States of America</option>
+                                <option value="United States">United States of America</option>
                                 <option value="Uraguay">Uruguay</option>
                                 <option value="Uzbekistan">Uzbekistan</option>
                                 <option value="Vanuatu">Vanuatu</option>
@@ -301,7 +301,7 @@
             </div>
             <div class="secondary" id="chart">
                 <iframe width="650" height="500" frameborder="0"
-                    src="https://covid19chart.org/#/?bare=1&include=Italy%3BUS%3BFrance%3B&scale=linear&start=1%2F1%2F21&top=0&domain=&theme=dark&advanced=1"></iframe>
+                    src=""></iframe>
             </div>
         </section>
     </div>
