--- a/index.html
+++ b/index.html
@@ -19,16 +19,14 @@
         href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&family=Imbue:wght@500&family=Oswald&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css" />
-
 </head>
 
 <body>
     <header>
         <h1><span class="icon">
                 <i class="fas fa-virus"></i>
-
             </span>
-            COVID CENTRAL
+            COVID-19 CENTRAL
             <span class="icon">
                 <i class="fas fa-virus"></i>
 
@@ -305,7 +303,6 @@
         </section>
 
         <section class="column">
-
             <!-- single new article -->
             <div class="news secondary" id='news'>
                 <a target="_blank" href=""></a>
@@ -319,7 +316,6 @@
         <h1>REMEMBER!</h1>
         <h1> SIX FEET. <i class="fas fa-people-arrows"></i></h1>
         <h1> SANTIZE. <i class="fas fa-hands-wash"></i></h1>
-
         <h1> SAFTEY. <i class="fas fa-head-side-mask"></i> </h1>
 
     </footer>
